required - package changes

--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.19.4"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
+    "tailwind-merge": "^2.2.1"
   }
 }
