--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,19 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
-    "axios": "^1.6.7",
-    "clsx": "^2.1.0",
+    "@tabler/icons-react": "^3.30.0",
+    "axios": "^1.8.1",
+    "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.0.5",
+    "motion": "^12.4.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-element-to-jsx-string": "^15.0.0",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
