--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "clsx": "^2.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^11.0.5",
     "tailwind-merge": "^2.2.1"
   }
