--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.30.0",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.14.1",
     "formidable": "^3.5.2",
     "framer-motion": "^11.0.5",
     "motion": "^12.4.7",
