--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.7.2",
     "formidable": "^3.5.2",
     "framer-motion": "^11.0.5",
+    "lucide-react": "^0.511.0",
     "motion": "^12.4.7",
     "next": "14.1.0",
     "react": "^18",
